feat(bot): mixed update, read description
- templates are jinja2
- rules for different channels and surfaces in json (filters, only "one of list" this far)
- schedule sending
- ask for PIN from ENV on startup instead of admins list

--- a/config/.env.example
+++ b/config/.env.example
@@ -14,9 +14,7 @@ DJANGO_DEBUG=
 DJANGO_HOSTS=*
 DJANGO_PORT=8080
 
-BOT_ADMIN_USERS=1234,5678
-BOT_PUBLISH_CHAT_ID=
-BOT_PUBLISH_BUTTON_TEXT="Опубликовать случайную вакансию"
+BOT_SECRET_KEY_ON_LOGIN=1234
 BOT_USE_WEBHOOK=True
 BOT_WEBHOOK_HOST=0.0.0.0
 BOT_WEBHOOK_BASE=informally-engrossed-neanderthal.cloudpub.ru
