--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -5,23 +5,34 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 asgiref==3.9.1
+astroid==3.3.11
 asyncpg==0.30.0
 attrs==25.3.0
 betterconf==3.1.0
 certifi==2025.8.3
+colorama==0.4.6
+dill==0.4.0
 Django==5.2.6
 frozenlist==1.7.0
 greenlet==3.2.4
 idna==3.10
+isort==6.0.1
+Jinja2==3.1.6
 magic-filter==1.0.12
+MarkupSafe==3.0.2
+mccabe==0.7.0
 multidict==6.6.4
+platformdirs==4.4.0
 propcache==0.3.2
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
+pylint==3.3.8
+schedule==1.2.2
 SQLAlchemy==2.0.43
 sqlparse==0.5.3
 structlog==25.4.0
+tomlkit==0.13.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
