--- a/config/.env.example
+++ b/config/.env.example
@@ -9,12 +9,9 @@ POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=5432
 
-DJANGO_SECRET_KEY=
-DJANGO_DEBUG=
-DJANGO_HOSTS=*
-DJANGO_PORT=8080
-
-BOT_SECRET_KEY_ON_LOGIN=1234
+BOT_DEBUG=False
+BOT_ADMIN_USER_IDS=132,123
+BOT_SECRET_KEY_ON_LOGIN=secret_code_12345
 BOT_USE_WEBHOOK=True
 BOT_WEBHOOK_HOST=0.0.0.0
 BOT_WEBHOOK_BASE=informally-engrossed-neanderthal.cloudpub.ru
