--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -10,9 +10,9 @@ asyncpg==0.30.0
 attrs==25.3.0
 betterconf==3.1.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 colorama==0.4.6
 dill==0.4.0
-Django==5.2.6
 frozenlist==1.7.0
 greenlet==3.2.4
 idna==3.10
@@ -28,6 +28,7 @@ psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 pylint==3.3.8
+requests==2.32.5
 schedule==1.2.2
 SQLAlchemy==2.0.43
 sqlparse==0.5.3
@@ -36,4 +37,5 @@ tomlkit==0.13.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
 yarl==1.20.1
